:bug: Fix horizontal scroll from design tab (#6213)

--- a/frontend/src/app/main/ui/workspace/sidebar/options.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options.scss
@@ -25,8 +25,8 @@
 }
 
 .element-options {
-  display: grid;
-  grid-auto-rows: min-content;
+  display: flex;
+  flex-direction: column;
   gap: $s-8;
   width: 100%;
   height: calc(100vh - $s-80);
